--- a/public/cocina.html
+++ b/public/cocina.html
@@ -2,36 +2,38 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Inventario Área Cocina 👨‍🍳</title>
+  <title>Inventario Área Cocina 👩‍🍳</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; text-align: center; }
     h2 { margin-bottom: 20px; }
-    table { width: 95%; margin: auto; border-collapse: collapse; font-size: 15px; }
+    table { width: 95%; margin: auto; border-collapse: collapse; font-size: 14px; margin-top: 20px; }
     th, td { padding: 8px; border: 1px solid #ccc; text-align: center; }
     th { background-color: #f2f2f2; }
-    input[type="number"], select { width: 70px; padding: 5px; font-size: 14px; border-radius: 4px; border: 1px solid #ccc; }
+    input[type="number"] { width: 70px; padding: 5px; font-size: 14px; border-radius: 4px; border: 1px solid #ccc; }
     button { margin-top: 20px; padding: 10px 20px; font-size: 15px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer; }
     button:hover { background-color: #218838; }
     .mensaje { margin-top: 15px; font-size: 16px; }
     .footer { margin-top: 30px; font-size: 12px; color: gray; }
+    .modal {
+      display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5); text-align: center; padding-top: 100px; z-index: 1000;
+    }
+    .modal-content {
+      background: white; margin: auto; padding: 20px; border-radius: 10px; width: 300px;
+    }
   </style>
 </head>
 <body>
 
-<h2>Inventario Área Cocina 👨‍🍳</h2>
+<h2>Inventario Área Cocina 👩‍🍳</h2>
 
-<form id="formulario-cocina">
+<form id="formulario-cocina" style="display:none;">
   <table>
     <thead>
-      <tr>
-        <th>Artículo</th>
-        <th>Cantidad</th>
-        <th>¿Solicitó?</th>
-      </tr>
+      <tr><th>Artículo</th><th>Cantidad</th><th>¿Solicitó?</th></tr>
     </thead>
     <tbody id="tabla-articulos"></tbody>
   </table>
-
   <button type="submit" id="btn-guardar">Guardar Inventario</button>
 </form>
 
@@ -39,6 +41,16 @@
 
 <div class="footer">
   Aplicación para administración de inventarios para PYMES — Alejandro Ornelas Orom Soluciones
+</div>
+
+<!-- Modal para capturar -->
+<div id="modal-captura" class="modal">
+  <div class="modal-content">
+    <h3 id="nombre-articulo"></h3>
+    <input type="number" id="cantidad" placeholder="Cantidad" required><br><br>
+    <label><input type="checkbox" id="solicito"> ¿Solicitó?</label><br><br>
+    <button onclick="guardarItem()">Continuar</button>
+  </div>
 </div>
 
 <script>
@@ -52,38 +64,67 @@ const articulos = [
   "DESENGRASANTE", "FIBRAS", "PAPEL CANELA", "TRAPEADOR", "CALABAZA", "CEBOLLA",
   "CEBOLLIN", "HABANERO", "JALAPEÑO", "MORRON AM", "MORRON VE", "PAPA COSTAL",
   "ZANAHORIA", "CONCENTRADO SAMBAL", "ACEITE", "COLORANTE", "PARMESANO",
-  "PIMI LIMON", "AJINOMOTO", "DASHI", "SOYA KIKOMA", "SOYA LUCKY", "TOGARACHI",
-  "ALITAS", "PAPA BOLSA", "PECHUGA", "PUERCO", "TRAPOS", "ENCENDEDOR", "BROCOLI"
+  "PIMI LIMON", "AJINOMOTO", "DASHI", "SOYA KIKOMA", "SOYA LUCKY",
+  "TOGARACHI", "ALITAS", "PAPA BOLSA", "PECHUGA", "PUERCO", "TRAPOS",
+  "ENCENDEDOR", "BROCOLI"
 ];
 
 const server = "https://inventario-horom-production.up.railway.app";
-const tabla = document.getElementById("tabla-articulos");
+let datosCapturados = [];
+let indexArticulo = 0;
 
-articulos.forEach((nombre, index) => {
-  const fila = document.createElement("tr");
-  fila.innerHTML = `
-    <td>${nombre}</td>
-    <td><input type="number" min="0" id="input-${index}" placeholder="0" required></td>
-    <td>
-      <select id="solicito-${index}">
-        <option value="No">No</option>
-        <option value="Si">Sí</option>
-      </select>
-    </td>
-  `;
-  tabla.appendChild(fila);
-});
+const modal = document.getElementById("modal-captura");
+const nombreArticulo = document.getElementById("nombre-articulo");
+const inputCantidad = document.getElementById("cantidad");
+const inputSolicito = document.getElementById("solicito");
 
-const inputs = Array.from(document.querySelectorAll('input[type="number"]'));
-inputs.forEach((input, index) => {
-  input.addEventListener("keydown", (e) => {
-    if (e.key === "Enter") {
-      e.preventDefault();
-      if (index + 1 < inputs.length) inputs[index + 1].focus();
-      else document.getElementById("btn-guardar").focus();
-    }
+function iniciarCaptura() {
+  mostrarModal();
+}
+
+function mostrarModal() {
+  nombreArticulo.textContent = articulos[indexArticulo];
+  inputCantidad.value = "";
+  inputSolicito.checked = false;
+  modal.style.display = "block";
+  inputCantidad.focus();
+}
+
+function guardarItem() {
+  const cantidad = inputCantidad.value.trim();
+  if (cantidad === "") {
+    alert("⚠️ Debes capturar una cantidad.");
+    return;
+  }
+  datosCapturados.push({
+    nombre: articulos[indexArticulo],
+    cantidad: cantidad,
+    solicito: inputSolicito.checked ? "Sí" : "No"
   });
-});
+
+  indexArticulo++;
+  if (indexArticulo < articulos.length) {
+    mostrarModal();
+  } else {
+    modal.style.display = "none";
+    mostrarTabla();
+  }
+}
+
+function mostrarTabla() {
+  const tabla = document.getElementById("tabla-articulos");
+  tabla.innerHTML = "";
+  datosCapturados.forEach(item => {
+    tabla.innerHTML += `
+      <tr>
+        <td>${item.nombre}</td>
+        <td>${item.cantidad}</td>
+        <td>${item.solicito}</td>
+      </tr>
+    `;
+  });
+  document.getElementById("formulario-cocina").style.display = "block";
+}
 
 // Evitar cerrar accidentalmente
 window.addEventListener('beforeunload', function (e) {
@@ -91,9 +132,9 @@ window.addEventListener('beforeunload', function (e) {
   e.returnValue = '';
 });
 
+// Guardar inventario
 document.getElementById("formulario-cocina").addEventListener("submit", async (e) => {
   e.preventDefault();
-
   const mensaje = document.getElementById("mensaje");
   const datosUsuario = JSON.parse(localStorage.getItem("tempDatos"));
 
@@ -104,19 +145,9 @@ document.getElementById("formulario-cocina").addEventListener("submit", async (e
   }
 
   const datos = {};
-  let todosLlenos = true;
-  articulos.forEach((nombre, index) => {
-    const cantidad = document.getElementById(`input-${index}`).value.trim();
-    const solicito = document.getElementById(`solicito-${index}`).value;
-    if (cantidad === "") todosLlenos = false;
-    datos[nombre] = `${cantidad} | Solicito: ${solicito}`;
+  datosCapturados.forEach(item => {
+    datos[item.nombre] = `${item.cantidad} | Solicito: ${item.solicito}`;
   });
-
-  if (!todosLlenos) {
-    mensaje.style.color = "red";
-    mensaje.textContent = "❌ No dejes campos de cantidad vacíos.";
-    return;
-  }
 
   try {
     if (datosUsuario.modoEdicion) {
@@ -129,25 +160,22 @@ document.getElementById("formulario-cocina").addEventListener("submit", async (e
       await fetch(`${server}/guardar-nombre`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          ...datosUsuario,
-          articulos: datos
-        })
+        body: JSON.stringify({ ...datosUsuario, articulos: datos })
       });
     }
-
     mensaje.style.color = "green";
     mensaje.textContent = "✅ Inventario guardado exitosamente.";
     localStorage.removeItem("tempDatos");
     window.removeEventListener('beforeunload', () => {});
     setTimeout(() => window.close(), 1000);
-
   } catch (error) {
     console.error(error);
     mensaje.style.color = "red";
     mensaje.textContent = "❌ Error al guardar el inventario.";
   }
 });
+
+iniciarCaptura();
 </script>
 
 </body>
