--- a/public/sushi.html
+++ b/public/sushi.html
@@ -6,52 +6,37 @@
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; text-align: center; }
     h2 { margin-bottom: 20px; }
-    table { width: 95%; margin: auto; border-collapse: collapse; font-size: 15px; margin-top: 20px; }
+    table { width: 95%; margin: auto; border-collapse: collapse; font-size: 15px; }
     th, td { padding: 8px; border: 1px solid #ccc; text-align: center; }
     th { background-color: #f2f2f2; }
-    input[type="number"] { width: 70px; padding: 5px; font-size: 14px; border-radius: 4px; border: 1px solid #ccc; }
     button { margin-top: 20px; padding: 10px 20px; font-size: 15px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer; }
     button:hover { background-color: #218838; }
     .mensaje { margin-top: 15px; font-size: 16px; }
     .footer { margin-top: 30px; font-size: 12px; color: gray; }
-    .modal {
-      display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0,0,0,0.5); text-align: center; padding-top: 100px; z-index: 1000;
-    }
-    .modal-content {
-      background: white; margin: auto; padding: 20px; border-radius: 10px; width: 300px;
-    }
   </style>
 </head>
 <body>
 
 <h2>Inventario Área Sushi 🍣</h2>
 
-<!-- Formulario de la tabla -->
-<form id="formulario-sushi" style="display:none;">
+<div id="formulario-sushi" style="display:none;">
   <table>
     <thead>
-      <tr><th>Artículo</th><th>Cantidad</th><th>¿Solicitó?</th></tr>
+      <tr>
+        <th>Artículo</th>
+        <th>Cantidad</th>
+        <th>¿Solicitó?</th>
+      </tr>
     </thead>
     <tbody id="tabla-articulos"></tbody>
   </table>
-  <button type="submit" id="btn-guardar">Guardar Inventario</button>
-</form>
 
-<div class="mensaje" id="mensaje"></div>
-
-<div class="footer">
-  Aplicación para administración de inventarios para PYMES — Alejandro Ornelas Orom Soluciones
+  <button id="btn-guardar">Guardar Inventario</button>
 </div>
 
-<!-- Modal para capturar -->
-<div id="modal-captura" class="modal">
-  <div class="modal-content">
-    <h3 id="nombre-articulo"></h3>
-    <input type="number" id="cantidad" placeholder="Cantidad" required><br><br>
-    <label><input type="checkbox" id="solicito"> ¿Solicitó?</label><br><br>
-    <button onclick="guardarItem()">Continuar</button>
-  </div>
+<div class="mensaje" id="mensaje"></div>
+<div class="footer">
+  Aplicación para administración de inventarios para PYMES — Alejandro Ornelas Orom Soluciones
 </div>
 
 <script>
@@ -63,71 +48,52 @@ const articulos = [
 ];
 
 const server = "https://inventario-horom-production.up.railway.app";
-let datosCapturados = [];
-let indexArticulo = 0;
+const datosCapturados = {};
+let indexActual = 0;
 
-const modal = document.getElementById("modal-captura");
-const nombreArticulo = document.getElementById("nombre-articulo");
-const inputCantidad = document.getElementById("cantidad");
-const inputSolicito = document.getElementById("solicito");
-
-function iniciarCaptura() {
-  mostrarModal();
-}
-
-function mostrarModal() {
-  nombreArticulo.textContent = articulos[indexArticulo];
-  inputCantidad.value = "";
-  inputSolicito.checked = false;
-  modal.style.display = "block";
-  inputCantidad.focus();
-}
-
-function guardarItem() {
-  const cantidad = inputCantidad.value.trim();
-  if (cantidad === "") {
-    alert("⚠️ Debes capturar una cantidad.");
+// Capturar artículo por artículo
+function capturarArticulo() {
+  if (indexActual >= articulos.length) {
+    mostrarFormularioCompleto();
     return;
   }
-  datosCapturados.push({
-    nombre: articulos[indexArticulo],
-    cantidad: cantidad,
-    solicito: inputSolicito.checked ? "Sí" : "No"
-  });
 
-  indexArticulo++;
-  if (indexArticulo < articulos.length) {
-    mostrarModal();
-  } else {
-    modal.style.display = "none";
-    mostrarTabla();
+  const nombreArticulo = articulos[indexActual];
+  const cantidad = prompt(`Cantidad para ${nombreArticulo}:`, "0");
+
+  if (cantidad === null || cantidad.trim() === "") {
+    alert("❌ Debes ingresar una cantidad.");
+    return capturarArticulo();
   }
+
+  const solicito = confirm(`¿Solicitó ${nombreArticulo}?`) ? "Sí" : "No";
+
+  datosCapturados[nombreArticulo] = `${cantidad.trim()} | Solicito: ${solicito}`;
+  indexActual++;
+  capturarArticulo();
 }
 
-function mostrarTabla() {
+// Mostrar tabla final
+function mostrarFormularioCompleto() {
   const tabla = document.getElementById("tabla-articulos");
   tabla.innerHTML = "";
-  datosCapturados.forEach(item => {
+
+  for (const nombre of articulos) {
+    const [cantidad, solicitado] = datosCapturados[nombre]?.split('| Solicito: ') || ["0", "No"];
     tabla.innerHTML += `
       <tr>
-        <td>${item.nombre}</td>
-        <td>${item.cantidad}</td>
-        <td>${item.solicito}</td>
+        <td>${nombre}</td>
+        <td>${cantidad}</td>
+        <td>${solicitado}</td>
       </tr>
     `;
-  });
+  }
+
   document.getElementById("formulario-sushi").style.display = "block";
 }
 
-// Captura segura antes de salir
-window.addEventListener('beforeunload', function (e) {
-  e.preventDefault();
-  e.returnValue = '';
-});
-
-// Guardar inventario
-document.getElementById("formulario-sushi").addEventListener("submit", async (e) => {
-  e.preventDefault();
+// Guardar en la base de datos
+document.getElementById("btn-guardar").addEventListener("click", async () => {
   const mensaje = document.getElementById("mensaje");
   const datosUsuario = JSON.parse(localStorage.getItem("tempDatos"));
 
@@ -137,30 +103,29 @@ document.getElementById("formulario-sushi").addEventListener("submit", async (e)
     return;
   }
 
-  const datos = {};
-  datosCapturados.forEach(item => {
-    datos[item.nombre] = `${item.cantidad} | Solicito: ${item.solicito}`;
-  });
-
   try {
     if (datosUsuario.modoEdicion) {
       await fetch(`${server}/editar-nombre/${datosUsuario.id}`, {
         method: "PUT",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ articulos: datos, usuario: datosUsuario.usuario })
+        body: JSON.stringify({ articulos: datosCapturados, usuario: datosUsuario.usuario })
       });
     } else {
       await fetch(`${server}/guardar-nombre`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ ...datosUsuario, articulos: datos })
+        body: JSON.stringify({
+          ...datosUsuario,
+          articulos: datosCapturados
+        })
       });
     }
+
     mensaje.style.color = "green";
     mensaje.textContent = "✅ Inventario guardado exitosamente.";
     localStorage.removeItem("tempDatos");
-    window.removeEventListener('beforeunload', () => {});
     setTimeout(() => window.close(), 1000);
+
   } catch (error) {
     console.error(error);
     mensaje.style.color = "red";
@@ -168,7 +133,8 @@ document.getElementById("formulario-sushi").addEventListener("submit", async (e)
   }
 });
 
-iniciarCaptura();
+// Iniciar captura
+capturarArticulo();
 </script>
 
 </body>
