--- a/public/sushi.html
+++ b/public/sushi.html
@@ -4,15 +4,20 @@
   <meta charset="UTF-8">
   <title>Inventario Área Sushi 🍣</title>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
-    table { width: 95%; margin: auto; border-collapse: collapse; margin-top: 20px; }
-    th, td { padding: 8px; border: 1px solid #ccc; text-align: center; }
-    th { background-color: #f2f2f2; }
-    button { margin-top: 20px; padding: 10px 20px; font-size: 15px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer; }
-    button:hover { background-color: #218838; }
-    .mensaje { margin-top: 15px; font-size: 16px; }
-    .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); text-align: center; padding-top: 80px; }
-    .modal-content { background: white; padding: 20px; border-radius: 10px; width: 350px; margin: auto; }
+    body { font-family: Arial, sans-serif; margin: 20px; text-align: center; }
+    h2 { margin-bottom: 20px; }
+    .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.5); text-align: center; padding-top: 80px; z-index: 1000; }
+    .modal-content { background: white; margin: auto; padding: 20px; border-radius: 10px; width: 350px; }
+    input[type="number"], label { margin: 10px; font-size: 16px; }
+    button { padding: 10px 20px; margin: 10px; font-size: 16px; border: none; border-radius: 5px; cursor: pointer; }
+    button.guardar { background-color: #28a745; color: white; }
+    button.guardar:hover { background-color: #218838; }
+    button.capturar { background-color: #3498db; color: white; }
+    button.capturar:hover { background-color: #2980b9; }
+    table { width: 90%; margin: auto; margin-top: 30px; border-collapse: collapse; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+    th { background: #f2f2f2; }
     .footer { margin-top: 30px; font-size: 12px; color: gray; }
   </style>
 </head>
@@ -20,28 +25,28 @@
 
 <h2>Inventario Área Sushi 🍣</h2>
 
+<div id="modal" class="modal">
+  <div class="modal-content">
+    <h3 id="nombre-articulo"></h3>
+    <input type="number" id="cantidad" placeholder="Cantidad" min="0" required><br>
+    <label><input type="checkbox" id="solicito"> Solicitó</label><br><br>
+    <button class="capturar" onclick="capturarDato()">Capturar</button>
+  </div>
+</div>
+
 <form id="formulario-sushi" style="display:none;">
   <table>
     <thead>
-      <tr><th>Artículo</th><th>Cantidad</th><th>Solicitó</th></tr>
+      <tr>
+        <th>Artículo</th>
+        <th>Cantidad</th>
+        <th>Solicitó</th>
+      </tr>
     </thead>
     <tbody id="tabla-articulos"></tbody>
   </table>
-
-  <button type="submit" id="btn-guardar">Guardar Inventario</button>
+  <button type="submit" class="guardar">Guardar Inventario</button>
 </form>
-
-<div id="mensaje" class="mensaje"></div>
-
-<!-- Modal de Captura -->
-<div id="modal-captura" class="modal">
-  <div class="modal-content">
-    <h3 id="nombre-articulo"></h3>
-    <input type="number" id="cantidad" placeholder="Cantidad" min="0" required><br><br>
-    <label><input type="checkbox" id="solicito"> Solicitó</label><br><br>
-    <button onclick="capturarDatos()">Siguiente</button>
-  </div>
-</div>
 
 <div class="footer">
   Aplicación para administración de inventarios para PYMES — Alejandro Ornelas Orom Soluciones
@@ -56,49 +61,53 @@ const articulos = [
 ];
 
 const server = "https://inventario-horom-production.up.railway.app";
-const datosCapturados = {};
-let indiceActual = 0;
+let datosCapturados = [];
+let indexArticulo = 0;
+const modal = document.getElementById("modal");
+const nombreArticulo = document.getElementById("nombre-articulo");
+const cantidadInput = document.getElementById("cantidad");
+const solicitoCheck = document.getElementById("solicito");
+const tabla = document.getElementById("tabla-articulos");
 
-function mostrarModal(){
-  document.getElementById("modal-captura").style.display = "block";
-  document.getElementById("nombre-articulo").textContent = articulos[indiceActual];
-  document.getElementById("cantidad").value = "";
-  document.getElementById("solicito").checked = false;
-}
-
-function capturarDatos(){
-  const cantidad = document.getElementById("cantidad").value.trim();
-  const solicito = document.getElementById("solicito").checked ? "Si" : "No";
-
-  if(cantidad === ""){
-    alert("❌ Debes capturar una cantidad.");
+function mostrarModal() {
+  if (indexArticulo >= articulos.length) {
+    modal.style.display = "none";
+    document.getElementById("formulario-sushi").style.display = "block";
+    cargarTabla();
     return;
   }
-
-  datosCapturados[articulos[indiceActual]] = `${cantidad} | Solicito: ${solicito}`;
-
-  indiceActual++;
-
-  if(indiceActual < articulos.length){
-    mostrarModal();
-  }else{
-    document.getElementById("modal-captura").style.display = "none";
-    mostrarTabla();
-  }
+  nombreArticulo.textContent = articulos[indexArticulo];
+  cantidadInput.value = "";
+  solicitoCheck.checked = false;
+  modal.style.display = "block";
 }
 
-function mostrarTabla(){
-  const tbody = document.getElementById("tabla-articulos");
-  tbody.innerHTML = "";
-
-  for(const [articulo, datos] of Object.entries(datosCapturados)){
-    const fila = document.createElement("tr");
-    const [cantidad, solicitud] = datos.split("|");
-    fila.innerHTML = `<td>${articulo}</td><td>${cantidad.trim()}</td><td>${solicitud.trim()}</td>`;
-    tbody.appendChild(fila);
+function capturarDato() {
+  const cantidad = cantidadInput.value.trim();
+  if (cantidad === "") {
+    alert("❌ Debes capturar una cantidad antes de continuar.");
+    return;
   }
+  datosCapturados.push({
+    articulo: articulos[indexArticulo],
+    cantidad: cantidad,
+    solicito: solicitoCheck.checked ? "Sí" : "No"
+  });
+  indexArticulo++;
+  mostrarModal();
+}
 
-  document.getElementById("formulario-sushi").style.display = "block";
+function cargarTabla() {
+  tabla.innerHTML = "";
+  datosCapturados.forEach(dato => {
+    tabla.innerHTML += `
+      <tr>
+        <td>${dato.articulo}</td>
+        <td>${dato.cantidad}</td>
+        <td>${dato.solicito}</td>
+      </tr>
+    `;
+  });
 }
 
 // Evitar cerrar accidentalmente
@@ -107,53 +116,56 @@ window.addEventListener('beforeunload', function (e) {
   e.returnValue = '';
 });
 
-// Guardar inventario
-
 document.getElementById("formulario-sushi").addEventListener("submit", async (e) => {
   e.preventDefault();
 
-  const mensaje = document.getElementById("mensaje");
-  const datosUsuario = JSON.parse(localStorage.getItem("tempDatos"));
+  const mensaje = document.createElement("div");
+  mensaje.classList.add("mensaje");
+  document.body.appendChild(mensaje);
 
-  if(!datosUsuario){
+  const datosUsuario = JSON.parse(localStorage.getItem("tempDatos"));
+  if (!datosUsuario) {
     mensaje.style.color = "red";
     mensaje.textContent = "❌ No se encontraron los datos del usuario.";
     return;
   }
 
-  try{
-    if(datosUsuario.modoEdicion){
+  const datos = {};
+  datosCapturados.forEach(dato => {
+    datos[dato.articulo] = `${dato.cantidad} | Solicito: ${dato.solicito}`;
+  });
+
+  try {
+    if (datosUsuario.modoEdicion) {
       await fetch(`${server}/editar-nombre/${datosUsuario.id}`, {
         method: "PUT",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ articulos: datosCapturados, usuario: datosUsuario.usuario })
+        body: JSON.stringify({ articulos: datos, usuario: datosUsuario.usuario })
       });
-    }else{
+    } else {
       await fetch(`${server}/guardar-nombre`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          ...datosUsuario,
-          articulos: datosCapturados
-        })
+        body: JSON.stringify({ ...datosUsuario, articulos: datos })
       });
     }
 
     mensaje.style.color = "green";
     mensaje.textContent = "✅ Inventario guardado exitosamente.";
     localStorage.removeItem("tempDatos");
-    window.localStorage.setItem("actualizarInventario", "true");
+    localStorage.setItem("actualizarInventario", "true");
+    localStorage.setItem("actualizarCompras", "true");
     window.removeEventListener('beforeunload', () => {});
+    setTimeout(() => window.close(), 1200);
 
-    setTimeout(() => window.close(), 1000);
-
-  }catch(error){
+  } catch (error) {
     console.error(error);
     mensaje.style.color = "red";
     mensaje.textContent = "❌ Error al guardar el inventario.";
   }
 });
 
+// Comienza a capturar inmediatamente
 mostrarModal();
 </script>
 
